<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSelectMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_month"
        android:textSize="16sp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerMonth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvSelectMonth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinnerYear"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" />

    <Spinner
        android:id="@+id/spinnerYear"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvSelectMonth"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnEnterDuties"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_duties"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerMonth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnViewResults"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_results"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnEnterDuties"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
