<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="01.11.2025" />

        <EditText
            android:id="@+id/etEmployeeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/employee_name"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/etShare"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/etShare"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/duty_share"
            android:inputType="numberDecimal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/etEmployeeName"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
